# LinAlg

./: LinAlg.cabal  README.md
Numeric/: LinAlg.hs
Numeric/LinAlg/: HMatrix.hs  SNat.hs  Vect.hs
