name:                LinAlg
version:             0.2.0.0
synopsis:            A DSL for specifying linear algebra computations
description:         LinAlg provides a domain-specific language for
                     specifying functional linear algebra computations 
                     (with immutable data structures). There exist backends
                     which depend on either hmatrix or CUBLAS/MAGMA.
license:             BSD3
author:              Ben Sherman
maintainer:          benmsherman@gmail.com
category:            Numeric
build-type:          Simple
cabal-version:       >=1.10

Flag HMatrix
  Description:         Enable HMatrix backend
  Default:             False

library
  exposed-modules:     Numeric.LinAlg
  other-extensions:    MultiParamTypeClasses, FunctionalDependencies
  build-depends:       base >=4.4 && <4.8
  default-language:    Haskell2010
  if flag(hmatrix) 
    exposed-modules:   Numeric.LinAlg.HMatrix
    build-depends:     hmatrix >= 0.13 && < 0.17
