name:                LinAlg
version:             0.2.0.0
synopsis:            An interface for specifying linear algebra computations
description:         LinAlg provides an interface for
                     specifying functional linear algebra computations 
                     (with immutable data structures). There exist backends
                     which depend on either hmatrix or CUBLAS/MAGMA.
license:             BSD3
author:              Ben Sherman
maintainer:          benmsherman@gmail.com
category:            Numeric
build-type:          Simple
cabal-version:       >=1.10

Flag HMatrix
  Description:         Enable HMatrix backend
  Default:             True

library
  exposed-modules:     Numeric.LinAlg
                       Numeric.LinAlg.SNat
                       Numeric.LinAlg.Vect
  other-extensions:    MultiParamTypeClasses, FunctionalDependencies
  build-depends:       base >=4.4 && <4.8
  default-language:    Haskell2010
  if flag(hmatrix) 
    exposed-modules:   Numeric.LinAlg.HMatrix
    build-depends:     hmatrix >= 0.13 && < 0.17
